force-app/main/default/objects/PathAssistant__c/PathAssistant__c.object-meta.xml
<CustomObject>
    <description>Representation of PathAssistant metadata used to supply configuration data to the Enhanced Path LWC. Has fields like: Active, Entity/Object API Name, Field API Name, Master Label, Record Type Name

Records can be created manually, but are also maintained via a scheduled job that runs the QueueableSyncPathAssistants class which upserts PathAssistant__c and PathAssistantStep__c records based on External Id</description>
    <label>Path Assistant</label>
    <nameField>
        <label>Path Assistant</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Path Assistants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>