force-app/main/default/objects/PathAssistant__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>A concatenation of ObjectAPIName_FieldAPIName_RecordTypeAPIName to provide a custom key to upsert and query Path Assistants by. Example: Lead_Status___MASTER__</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>