force-app/main/default/objects/PathAssistant__c/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <defaultValue>&apos;__MASTER__&apos;</defaultValue>
    <inlineHelpText>The Record Type Developer/API Name this Path Assistant is for</inlineHelpText>
    <label>Record Type API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>